add photo to index and title

--- a/index.html
+++ b/index.html
@@ -5,5 +5,7 @@
 </head>
 <body>
   <a href="pages/gallery.html"></a>
+  <h1>My favorite car</h1>
+  <img src="images/audi rs6 performance.jpg">
 </body>
 </html>
