add width to all photos

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
   <title>Document</title>
 </head>
 <body>
-  <a href="pages/gallery.html"></a>
   <h1>My favorite car</h1>
-  <img src="images/audi rs6 performance.jpg">
+  <a href="pages/gallery.html"></a>
+  <img src="images/audi rs6 performance.jpg" width="700">
 </body>
 </html>
