--- a/pages/gallery.html
+++ b/pages/gallery.html
@@ -4,8 +4,8 @@
   <title>Gallery</title>
 </head>
 <body>
-  <img src="../images/audi rs6 performance.jpg">
-  <img src="../images/audi rs7 sportback.jpg">
+  <img src="../images/audi rs6 performance.jpg" width="700">
+  <img src="../images/audi rs7 sportback.jpg" width="700">
   <a href="../index.html"></a>
 </body>
 </html>
