--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 </head>
 <body>
   <h1>My favorite car</h1>
-  <a href="pages/gallery.html"></a>
+  <a href="pages/gallery.html">My favotite cars</a>
   <img src="images/audi rs6 performance.jpg" width="700">
 </body>
 </html>
