add table with text and name of link in gallery page

--- a/index.html
+++ b/index.html
@@ -7,5 +7,40 @@
   <h1>My favorite car</h1>
   <a href="pages/gallery.html">My favotite cars</a>
   <img src="images/audi rs6 performance.jpg" width="700">
+  <h2>Команди по Git які були на уроці</h2>
+  <table border="1">
+    <tr>
+      <td>Ініціалізація роботи</td>
+      <td>git init</td>
+    </tr>
+    <tr>
+      <td>Зв'язати проект з Github</td>
+      <td>git config --global user.name</td>
+    </tr>
+    <tr>
+      <td>Зв'язати емейл</td>
+      <td>git config --global email.name</td>
+    </tr>
+    <tr>
+      <td>Проіндексувати зміни</td>
+      <td>git add .</td>
+    </tr>
+    <tr>
+      <td>Закомітити зміни</td>
+      <td>git commit --m "Вказуємо зміни"</td>
+    </tr>
+    <tr>
+      <td>Перейти до минулої версії з видаленням папок та файлів</td>
+      <td>git reset --hard(і код версії)</td>
+    </tr>
+    <tr>
+      <td>Перейти до минулої версії поки без видалення</td>
+      <td>git reset --soft(код версії)</td>
+    </tr>
+    <tr>
+      <td>Перевірити версію Git</td>
+      <td>git --version</td>
+    </tr>
+  </table>
 </body>
 </html>
