--- a/pages/gallery.html
+++ b/pages/gallery.html
@@ -6,6 +6,6 @@
 <body>
   <img src="../images/audi rs6 performance.jpg" width="700">
   <img src="../images/audi rs7 sportback.jpg" width="700">
-  <a href="../index.html"></a>
+  <a href="../index.html">index</a>
 </body>
 </html>
